test: 프로젝트 및 링크 관련 서비스 테스트 코드 추가