@@ -96,6 +96,7 @@ dependencies {
     testImplementation "io.kotest:kotest-runner-junit5:${kotestVersion}"
     testImplementation "io.kotest:kotest-assertions-core:${kotestVersion}"
     testImplementation "io.kotest:kotest-property:${kotestVersion}"
+    testImplementation "io.kotest.extensions:kotest-extensions-spring:1.1.3"
 
     // Testing - Mockito
     testImplementation "org.mockito.kotlin:mockito-kotlin:${mockitoKotlinVersion}"
@@ -121,12 +122,6 @@ openapi3 {
 tasks.named('test') {
     outputs.dir snippetsDir
     useJUnitPlatform()
-    
-    // Optional: Parallel Execution (Commented out for stability)
-    // maxParallelForks = (Runtime.runtime.availableProcessors() / 2) ?: 1
-    
-    // Optional: JVM Optimizations
-    // jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off", "-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1")
     jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
